--- a/package.json
+++ b/package.json
@@ -3,19 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "cra-template": "1.0.3",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-react": "^7.23.1",
+    "google-maps-react": "^2.0.6",
+    "moment": "^2.27.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.5.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.0.5",
+    "react-intl": "2.8.0",
+    "react-portal": "^4.2.1",
+    "react-redux": "^7.2.0",
+    "react-responsive": "^8.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.27.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "swr": "^0.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx .",
+    "lint:fix": " eslint --fix --ext .js,.jsx ."
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +59,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
   }
 }
